Bug 1794298 - Improve font-selection heuristics so that Twemoji-Mozilla keycaps (in emoji style) work as expected. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D168401